--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     de sistemas </span></p>
             <p id="welcome-text">Seja bem vindo!</p>
             <ul id="social-container">
-                <li><a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-                <li><a href="#" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
-                <li><a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                <li><a href="https://www.instagram.com/dompedronee/?igshid=YzgyMTM2MGM%3D" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="https://github.com/Dompedronee" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+                <li><a href="https://www.linkedin.com/in/pedro-moreira-34b26a202++" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
 
             </ul>
             <div id="email-container">
